src/objects/FieloAlpha__RewardTag__c.object
<CustomObject>
    <description>Set of tags of a reward.</description>
    <fields>
        <fullName>FieloPLT__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Reward__c</fullName>
        <label>Reward</label>
        <referenceTo>FieloPLT__Reward__c</referenceTo>
        <relationshipLabel>Rewards Tags</relationshipLabel>
        <relationshipName>RewardTag</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>FieloPLT__Tag__c</referenceTo>
        <relationshipLabel>Rewards Tags</relationshipLabel>
        <relationshipName>RewardTag</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Reward Tag</label>
    <nameField>
        <label>Prize_PrizeTag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ProgramConsistency</fullName>
        <active>true</active>
        <errorConditionFormula>FieloPLT__Reward__r.FieloPLT__Program__c  &lt;&gt;  FieloPLT__Tag__r.FieloPLT__Program__c</errorConditionFormula>
        <errorMessage>This tag belongs to another program. You must create the tag in this program before trying to use it.</errorMessage>
    </validationRules>
</CustomObject>